# alpaca-lora

./: finetune.py  finetune_im8_clauses_qa.py  finetune_im8_data.py  finetune_im8_data_llama_7b.py  generate.py  generate_im8.py  pyproject.toml
